# nagatha_core

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  EVALUATION_REPORT.md  INDEX.md  PHASE1_COMPLETE.md  README.md  demo_new_packages.py  docker-compose.override.yml.example  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt  setup.sh
.github/: copilot-instructions.md
.github/workflows/: sync-wiki.yml
docs/: API.md  Architecture.md  Build-Complete.md  Contracts.md  Contributing.md  Docker.md  File-Manifest.md  Home.md  Index.md  Summary.md  Task-Registry.md  User-Guide.md  Verification-Checklist.md  WIKI-SETUP.md  architecture.md  index.md  provider-lifecycle.md  provider-manifest.md  tasks.md
examples/dev-compose/: README.md  docker-compose.yml  smoke_test.py
examples/provider_hello/: Dockerfile  app.py  register.py  requirements.txt  tasks.py
nagatha_core/: __init__.py  __main__.py  broker.py  cli.py  config.py  logging.py  main.py  registry.py  types.py
nagatha_core/agent/: __init__.py  base.py  runner.py
nagatha_core/ai/: __init__.py
nagatha_core/api/: __init__.py  schemas.py  utils.py  v1.py
nagatha_core/contracts/: __init__.py  protocols.py
nagatha_core/events/: __init__.py  bus.py  envelope.py
nagatha_core/modules/echo_bot/: README.md  __init__.py  config.yaml
nagatha_core/observability/: __init__.py  logging.py  tracing.py
nagatha_core/providers/: __init__.py  registry.py
nagatha_core/runtime/: __init__.py  celery_app.py  redis_client.py  settings.py
tests/: conftest.py  test_agent.py  test_ai.py  test_api_versioning.py  test_config.py  test_echo_bot.py  test_events.py  test_logging.py  test_observability.py  test_providers.py  test_registry.py  test_runtime.py  test_types.py
